--- a/src/components/input/TextField.module.css
+++ b/src/components/input/TextField.module.css
@@ -22,6 +22,7 @@
   border-bottom: 2px solid #4f4f4f;
   background: var(--main-bg-color);
   color: white;
+  caret-color: white;
 }
 
 .filled label {
